BusOne02/src/objects/EM_Catalog_vod__c.object
<CustomObject>
    <description>Used to store the names of topics and services that pertain to Veeva Event Management.</description>
    <fields>
        <fullName>Base_Language_Name_vod__c</fullName>
        <description>The name of the catalog entry in the base language. If populated, this field can be used to tie entries together across languages.</description>
        <label>Base_Language_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of the material</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name_vod__c</fullName>
        <description>The name of the catalog entry in the local language</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Indicates the status of the material.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved_vod</fullName>
                </value>
                <value>
                    <fullName>Expired_vod</fullName>
                </value>
                <value>
                    <fullName>Staged_vod</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vault_Link_vod__c</fullName>
        <description>Stores the document&apos;s Vault Doc ID</description>
        <label>Vault Link</label>
        <type>Url</type>
    </fields>
    <label>EM Catalog</label>
    <listViews>
        <fullName>Eligible_Event_Catalogs</fullName>
        <columns>NAME</columns>
        <columns>Name_vod__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Description_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>Eligible Event Catalogs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EM Catalogs</pluralLabel>
    <recordTypes>
        <fullName>Contract_vod</fullName>
        <active>true</active>
        <description>Used to store .docx templates for contracts for events</description>
        <label>Contract_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Topic_vod</fullName>
        <active>true</active>
        <description>Used to store specific names of topics that are used when planning events.</description>
        <label>Event_Topic_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Topic_vod</fullName>
        <active>true</active>
        <description>Used to store the general topics that a speaker can be trained on, such as compliance training.</description>
        <label>General_Topic_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Presentation_vod</fullName>
        <active>true</active>
        <description>Used to store presentations for events</description>
        <label>Presentation_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Print_Invitation_Template_vod</fullName>
        <active>true</active>
        <description>Used to store .docx templates for print invitations for events</description>
        <label>Print_Invitation_Template_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Print_Sign_In_Template_vod</fullName>
        <active>true</active>
        <description>Used to store .docx templates for print invitations for events</description>
        <label>Print_Sign_In_Template_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Speaker_Service_vod</fullName>
        <active>true</active>
        <description>Used to store the contracted services for a speaker.</description>
        <label>Speaker_Service_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>